# luoxu

./: .gitignore  Caddyfile  Dockerfile  Dockerfile-postgres  MANIFEST.in  README.md  config.toml.example  dbsetup.sql  docker-compose.yml  pyproject.toml  reindex.py  requirements.txt  update-2022-06-23.md
.github/workflows/: build-and-test-database.yml  build-and-test.yml
deploy/: README.md  config.toml  docker-compose.yml
deploy/db/init/: 2-dbsetup.sql
luoxu/: __main__.py  auth.py  ctxvars.py  db.py  group.py  indexing.py  ls_dialogs.py  mediamgr.py  ocr.py  types.py  util.py  web.py
luoxu-cutwords/: .gitignore  Cargo.toml  MANIFEST.in  pyproject.toml
luoxu-cutwords/scripts/: deploy
luoxu-cutwords/src/: db.rs  main.rs
luoxu/lib/: expiringdict.py  nicelogger.py
luoxu_plugins/adminapi/: __init__.py
luoxu_plugins/auth/: __init__.py
luoxu_plugins/tg2matrix/: __init__.py  utils.py
luoxu_plugins/wordcloud/: __init__.py  __main__.py
querytrans/: Cargo.toml  rust-toolchain.toml
querytrans/src/: display.rs  lib.rs  parser.rs  transform.rs
scripts/: sync2server
