[package]
name = "luoxu-cutwords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jieba-rs = "*"
structopt = "*"
color-eyre = "*"
eyre = "*"
tracing = "*"
tracing-subscriber = "*"
postgres = "*"

[profile.release]
lto = true
