[package]
name = "luoxu-cutwords"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jieba-rs = "*"
structopt = "*"
eyre = "*"
tracing = "*"
postgres = "*"

[dependencies.tracing-subscriber]
version = "*"
features = ["env-filter", "fmt", "ansi"]

[profile.release]
lto = true
