[package]
name = "luoxu-cutwords"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", default-features = false, features = ["std", "derive"] }
jieba-rs = "*"
eyre = "*"
tracing = "*"
postgres = "*"

[dependencies.tracing-subscriber]
version = "*"
features = ["env-filter", "fmt", "ansi"]

[profile.release]
lto = true
