[package]
name = "querytrans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "querytrans"
crate-type = ["cdylib"]

[dependencies]
eyre = { version = "0.6.8", features = ["pyo3"] }
lazy_static = "1.4.0"
nom = "7.1.3"
opencc-rust = "1.1.14"
pyo3 = { version = "0.18.1", features = ["extension-module", "eyre"] }
