[package]
name = "querytrans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "querytrans"
crate-type = ["cdylib"]

[dependencies]
eyre = "*"
lazy_static = "*"
nom = "*"
opencc-rust = "*"
pyo3 = { version = "*", features = ["extension-module", "eyre"] }
